
[TestNextCmd/summon_next_window_from_scratchpad - 1]
Context:
  workspaces:
  - workspace: ws1
    focused-window-id: 5678
  - workspace: .scratchpad
  windows:
  - window-id: 1234
    app-name: Notepad
  - window-id: 5678
    app-name: Finder
  - window-id: 9999
    app-name: Scratchpad Window
  - window-id: 8888
    app-name: Another Scratchpad Window
Command: |
  $ aerospace-scratchpad next
Output:
  status: success
  stdout: |
    command=next action=to-workspace window_id=9999 app_name="Scratchpad Window" workspace="" target_workspace=ws1 result=ok message=""
  error: ""

---

[TestNextCmd/fails_when_getting_focused_workspace_returns_an_error - 1]
Context:
  {}
Command: |
  $ aerospace-scratchpad next
Output:
  status: error
  stdout: ""
  error: |
    Error: unable to get focused workspace
    mocked_error

---

[TestNextCmd/fails_when_no_scratchpad_windows_available - 1]
Context:
  {}
Command: |
  $ aerospace-scratchpad next
Output:
  status: error
  stdout: ""
  error: |
    Error: no scratchpad windows found

---

[TestNextCmd/fails_when_moving_window_to_workspace_returns_an_error - 1]
Context:
  {}
Command: |
  $ aerospace-scratchpad next
Output:
  status: error
  stdout: ""
  error: |
    Error: unable to move window '9999 | Scratchpad Window ' to workspace 'ws1': mocked_move_error

---
